--- a/src/components/shop-basket-modal/shopBasketModal.css
+++ b/src/components/shop-basket-modal/shopBasketModal.css
@@ -9,6 +9,7 @@
 .ShopBasketModal {
     margin: auto;
     position: fixed;
+    overflow: auto;
     background: #FFFFFF;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
     border-radius: 10px;
